crates/vize_atelier_vapor/src/tests_source_map/snapshots/vize_atelier_vapor__tests_source_map__computed_dom__computed_dom_indexed_code.snap
---
source: crates/vize_atelier_vapor/src/tests_source_map/computed_dom.rs
expression: code
---
import { setDynamicProps as _setDynamicProps, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div></div>", true)

export function render(_ctx) {
  const n0 = t0()
  _renderEffect(() => _setDynamicProps(n0, [{ class: ["base", _ctx.classes], [_ctx.keys[_ctx.index]]: _ctx.value }]))
  return n0
}
