crates/vize_atelier_vapor/src/tests_source_map/snapshots/vize_atelier_vapor__tests_source_map__computed_dom__computed_dom_indexed_map.snap
---
source: crates/vize_atelier_vapor/src/tests_source_map/computed_dom.rs
expression: segments
---
[
    "1:23 \"div></di\" -> \"div clas\"",
    "3:0 \"export f\" -> \"<div cla\"",
]
