crates/vize_atelier_vapor/src/tests_source_map/snapshots/vize_atelier_vapor__tests_source_map__computed_dom__computed_dom_reference_code.snap
---
source: crates/vize_atelier_vapor/src/tests_source_map/computed_dom.rs
expression: code
---
import { setDynamicProps as _setDynamicProps, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div>text</div>", true)

export function render(_ctx) {
  const n0 = t0()
  _renderEffect(() => _setDynamicProps(n0, [{ title: "fixed", [_ctx.name]: _ctx.value }]))
  return n0
}
